# openapi.yaml
@@ -69,6 +69,25 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/api.discover.v1.GetDiscoverListReply'
+    /api/v1/discover/{id}:
+        get:
+            tags:
+                - Discover
+            description: GetDiscover 查询发现内容
+            operationId: Discover_GetDiscover
+            parameters:
+                - name: id
+                  in: path
+                  required: true
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.discover.v1.GetDiscoverReply'
     /api/v1/file/download:
         get:
             tags:
@@ -970,6 +989,55 @@ paths:
                                 $ref: '#/components/schemas/api.file.v1.StaticFileReply'
 components:
     schemas:
+        api.discover.v1.CatInfo:
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                catType:
+                    type: integer
+                    format: int32
+                breedType:
+                    type: integer
+                    format: int32
+                gender:
+                    type: integer
+                    format: int32
+                weight:
+                    type: number
+                    format: float
+        api.discover.v1.DiscoverInfo:
+            type: object
+            properties:
+                id:
+                    type: string
+                title:
+                    type: string
+                postType:
+                    type: integer
+                    format: int32
+                cat:
+                    $ref: '#/components/schemas/api.discover.v1.CatInfo'
+                user:
+                    $ref: '#/components/schemas/api.discover.v1.UserInfo'
+                provinceId:
+                    type: integer
+                    format: int32
+                cityId:
+                    type: integer
+                    format: int32
+                lostTime:
+                    type: string
+                address:
+                    type: string
+                remark:
+                    type: string
+                createdTime:
+                    type: string
+                updatedTime:
+                    type: string
         api.discover.v1.DiscoverList:
             type: object
             properties:
@@ -1009,6 +1077,31 @@ components:
                     type: boolean
                 data:
                     $ref: '#/components/schemas/api.discover.v1.DiscoverList'
+        api.discover.v1.GetDiscoverReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: int32
+                message:
+                    type: string
+                success:
+                    type: boolean
+                data:
+                    $ref: '#/components/schemas/api.discover.v1.DiscoverInfo'
+        api.discover.v1.UserInfo:
+            type: object
+            properties:
+                id:
+                    type: string
+                name:
+                    type: string
+                provinceId:
+                    type: integer
+                    format: int32
+                cityId:
+                    type: integer
+                    format: int32
         api.file.v1.DownloadFileReply:
             type: object
             properties:
@@ -2178,13 +2271,7 @@ components:
                     format: enum
                 loginIdentity:
                     type: string
-                    description: |-
-                        统一身份标识：
-                         账号登录: username
-                         邮箱登录: email
-                         短信登录: mobile
-                         微信登录: unionid/openid
-                         QQ登录: openid
+                    description: "统一身份标识：\r\n 账号登录: username\r\n 邮箱登录: email\r\n 短信登录: mobile\r\n 微信登录: unionid/openid\r\n QQ登录: openid"
                 password:
                     type: string
                     description: 账号/邮箱密码登录时使用（其余方式可不传）
